# task-manager

task-manager-backend/: .gitignore  Cargo.toml
task-manager-backend/src/: auth.rs  cors.rs  db_types.rs  main.rs  task.rs
task-manager-frontend/: package-lock.json  package.json
task-manager-frontend/src/: App.svelte
task-manager-frontend/src/backend/: task.ts
