[package]
name = "task-manager-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.31"
color-eyre = "0.6.2"
cookie = "0.18.0"
dotenvy = "0.15.7"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
surrealdb = "1.0.0"
tokio = { version = "1.34.0", features = ["full"] }
